--- a/ip-api-proxy/templates/hpa.yaml
+++ b/ip-api-proxy/templates/hpa.yaml
@@ -3,8 +3,7 @@ apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "ip-api-proxy.fullname" . }}
-  labels:
-    {{- include "ip-api-proxy.labels" . | nindent 4 }}
+  labels: {{ include "ip-api-proxy.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
