--- a/ip-api-proxy/templates/serviceaccount.yaml
+++ b/ip-api-proxy/templates/serviceaccount.yaml
@@ -3,8 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "ip-api-proxy.serviceAccountName" . }}
-  labels:
-    {{- include "ip-api-proxy.labels" . | nindent 4 }}
+  labels: {{ include "ip-api-proxy.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
