--- a/ip-api-proxy/templates/deployment.yaml
+++ b/ip-api-proxy/templates/deployment.yaml
@@ -37,11 +37,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /health
+              path: /ping
               port: http
           readinessProbe:
             httpGet:
-              path: /health
+              path: /ping
               port: http
           resources: {{ toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
